Adding compiler source and target version on properties on pom to Java 21 and resolving version incompatibilities with actual code